# test_task

./: .gitignore  pyproject.toml
config/: settings.py
